# Stock-prices

./: .gitignore  README.md  contar_registros.py  main.py  mostrar_registros.py  otromain.py  pyproject.toml  read_db.py  reporte_grafico.py  stocks.db  ver_estructura.py
Stock-prices-main/: contar_registros.py  pyproject.toml  reporte_grafico.py  ver_estructura.py
