[project]
name = "stock-prices"
version = "0.1.0"
description = "Mini Gestor de Precios de Acciones"
authors = [
    {name = "mcanavari",email = "marcelo.canavari@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=0.2.66,<0.3.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "sqlite-utils (>=3.38,<4.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
